--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
   <script src="libs/jquery-1.11.1.js"></script>
   <script src="libs/ember-template-compiler-1.10.0.js"></script>
