--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
   <script src="routes/lots.js"></script>
   <script src="routes/lot.js"></script>
-  <script src="routes/recent-items.js"></script>
   <script src="routes/new-item.js"></script>
 
   <script src="models/lot.js"></script>
@@ -33,7 +32,8 @@
 
   <script>
     EmberHandlebarsLoader.loadTemplates([
-      'application', 'about', 'lots', 'lot', 'new-lot', 'new-item'
+      'application', 'about', 'lots', 'lot', 'new-lot', 'new-item',
+      'contact', 'phone', 'email'
     ]);
   </script>
 </head>
