Adjust bootstrap css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Auction</title>
 
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/paper.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
